# moxi

./: .gitignore  CMakeLists.txt  Makefile.am  README  agent.h  agent_config.c  agent_ping.c  agent_stats.c  assoc.c  cJSON.c  cJSON.h  cache.c  check_moxi_agent.c  check_util.c  config.cmake.h  config_static.h  configure.ac  cproxy.c  cproxy.h  cproxy_config.c  cproxy_front.c  cproxy_multiget.c  cproxy_protocol.c  cproxy_protocol_a.c  cproxy_protocol_a2a.c  cproxy_protocol_a2b.c  cproxy_protocol_b.c  cproxy_protocol_b2b.c  cproxy_stats.c  htgram.c  htgram_test.c  index.markdown  items.c  items.h  log.c  log.h  matcher.c  matcher.h  mcs.c  mcs.h  (+13 more)
_layouts/: default.html
conflate/: adhoc_commands.c  conflate.c  conflate_internal.h  kvpair.c  logging.c  persist.c  rest.c  rest.h  util.c  xmpp.c
doc/: moxi.1
include/libconflate/: conflate.h
libmemcached/: CMakeLists.txt  libmemcached_config.h.in
libmemcached/libhashkit/: digest.c
libmemcached/libmemcached/: byteorder.h
libmemcached/win32/: wrappers.h
m4/: pandora_have_libmemcached.m4
scripts/: dtrace-profile.d  dtrace-syscalls.d
src/: agent.h  agent_config.c  agent_ping.c  agent_stats.c  assoc.c  cache.c  cache.h  check_moxi.c  check_moxi_agent.c  check_util.c  check_work.c  config.cmake.h  config_static.h  cproxy.c  cproxy.h  cproxy_config.c  cproxy_front.c  cproxy_multiget.c  cproxy_protocol_a.c  cproxy_protocol_a2a.c  cproxy_protocol_a2b.c  cproxy_protocol_b.c  cproxy_protocol_b2b.c  cproxy_stats.c  daemon.c  genhash.c  htgram.c  items.c  log.c  log.h  matcher.c  matcher.h  mcs.c  mcs.h  memcached.c  memcached.h  redirects.h  slabs.c  solaris_priv.c  stats.c  (+9 more)
t/: incrdecr.t  issue-MB-2649.sh  issue-MB-2660.sh  issue-MB-2689.sh  issue-MB-2811.sh  issue-MB-2825.sh  issue-MB-2972.sh  issue-MB-2980.sh  issue-MB-3076.sh  issue-MB-3113.sh  issue-MB-3575.sh  issue-conn-close.sh  ketama_rest_mixed.cfg  ketama_rest_one.cfg  moxi_all.pl  moxi_mock.pl  moxi_mock_a2a.py  moxi_mock_a2b.py  moxi_mock_auth.py  moxi_mock_b2b.py  moxi_mock_server.py  moxi_multitenancy.py  moxi_multitenancy_default.py  moxi_multitenancy_rest.cfg  moxi_multitenancy_rest_default.cfg  moxi_one.pl  rest_mock.rb
tests/conflate/: check_alarm.c  check_kvpair.c  test_common.c  test_common.h
tests/moxi/: htgram_test.c  sizes.c
tests/vbucket/: macros.h  regression.c  testapp.c  testketama.c
tests/vbucket/config/: testapp-config-zero-num-vbuckets
vbucket/: vbucket.c
win32/: win32.h
